--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<script src="js/xivelyjs-1.0.0.min.js"></script>
 	<script src="js/d3.v2.js"></script>
 	<script src="js/rickshaw.min.js"></script>
-
+<title>Lectura de Medidores</title>
 </head>
 <body>
 
