--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
 
 	<script src="js/foundation.min.js"></script>
 	<script src="follows.js"></script>
+	<script src="follows.js"></script>
 
 </body>
 </html>
